# closet

./: LICENSE  Makefile  docker-compose.yml  init.js  init.sql  pyproject.toml
backend/: manage.py
backend/clothes/: asgi.py  models.py  settings.py  urls.py  wsgi.py
