[tool.poetry]
name = "closet"
version = "0.1.0"
description = "showcase for icehongssin's closet"
authors = ["icehongssii <douner@adoc.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Django = "^5.1"
sqlalchemy = "^2.0.32"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
